--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lua"]
 	path = lua
 	url = https://github.com/ejoy/lua.git
+[submodule "mysql-connector-c"]
+	path = mysql-connector-c
+	url = https://github.com/kinbei/mysql-connector-c.git
